# ctbignum

./: .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.old  CREDITS.txt  NOTICE  README.md  addition.hpp  all.hpp  barrett.hpp  bench.cpp  field.hpp  initialization.hpp  mult.hpp  print.hpp  relational_ops.hpp  slicing.hpp  unit_tests.cpp
.github/workflows/: codeql-analysis.yml
benchmarks/: CMakeLists.txt
benchmarks/src/: bench-modexp.cpp  bench-modinv.cpp  bench-montmul.cpp  bench-mul.cpp  bench.cpp  modulus.hpp
cmake/: FindBenchmark.cmake  FindGMPXX.cmake  FindNTL.cmake  config.cmake.in
doc/: bigint.md  finitefield.md
docker/: Dockerfile
formal_verification/ct-verif/: README.md  wrapper.cpp
formal_verification/saw-cryptol/: add.bc  add.cry  compile.sh  conversions.cry  mul.bc  mul.cpp  mul.cry  mul.saw  mul_crucible.saw  mul_wrapper.bc  mul_wrapper.cpp
include/ctbignum/: addition.hpp  all.hpp  barrett.hpp  bigint.hpp  bitshift.hpp  config.hpp  ctbignum.hpp  decimal_literals.hpp  division.hpp  field.hpp  gcd.hpp  initialization.hpp  invariant_div.hpp  io.hpp  mod_exp.hpp  mod_inv.hpp  montgomery.hpp  mult.hpp  pow.hpp  print.hpp  relational_ops.hpp  slicing.hpp  type_traits.hpp  utility.hpp
test/: CMakeLists.txt  unit_tests.cpp
test/src/: tests_main.cpp  unit-field.cpp  unit-init.cpp  unit-invariantdiv.cpp  unit-io.cpp  unit-modinv.cpp  unit-tests.cpp
verification/: add.bc  add.cpp  add.cry  add_crucible.saw  big_int.cry  compile.sh  extract_mangled_name.py  mul.cry
